--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,80 +1,210 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
+<head>
     <meta charset="UTF-8">
-    <title>文件上传</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        a {
+            text-decoration: none;
+        }
+
+        input,
+        button {
+            background: transparent;
+            border: 0;
+            outline: none;
+        }
+
+        body {
+            height: 100vh;
+            background: linear-gradient(#141e30, #243b55);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 16px;
+            color: #03e9f4;
+        }
+
+        .loginBox {
+            width: 400px;
+            height: 364px;
+            background-color: #0c1622;
+            margin: 100px auto;
+            border-radius: 10px;
+            box-shadow: 0 15px 25px 0 rgba(0, 0, 0, .6);
+            padding: 40px;
+            box-sizing: border-box;
+        }
+
+        h2 {
+            text-align: center;
+            color: aliceblue;
+            margin-bottom: 30px;
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+        .item {
+            height: 45px;
+            border-bottom: 1px solid #fff;
+            margin-bottom: 40px;
+            position: relative;
+        }
+
+        .item input {
+            width: 100%;
+            height: 100%;
+            color: #fff;
+            padding-top: 20px;
+            box-sizing: border-box;
+        }
+
+        .item input:focus+label,
+        .item input:valid+label {
+            top: 0px;
+            font-size: 2px;
+        }
+
+        .item label {
+            position: absolute;
+            left: 0;
+            top: 12px;
+            transition: all 0.5s linear;
+        }
+
+        .btn {
+            padding: 10px 20px;
+            margin-top: 30px;
+            color: #03e9f4;
+            position: relative;
+            overflow: hidden;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            left: 35%;
+        }
+
+        .btn:hover {
+            border-radius: 5px;
+            color: #fff;
+            background: #03e9f4;
+            box-shadow: 0 0 5px 0 #03e9f4,
+            0 0 25px 0 #03e9f4,
+            0 0 50px 0 #03e9f4,
+            0 0 100px 0 #03e9f4;
+            transition: all 1s linear;
+        }
+
+        .btn>span {
+            position: absolute;
+        }
+
+        .btn>span:nth-child(1) {
+            width: 100%;
+            height: 2px;
+            background: -webkit-linear-gradient(left, transparent, #03e9f4);
+            left: -100%;
+            top: 0px;
+            animation: line1 1s linear infinite;
+        }
+
+        @keyframes line1 {
+
+            50%,
+            100% {
+                left: 100%;
+            }
+        }
+
+        .btn>span:nth-child(2) {
+            width: 2px;
+            height: 100%;
+            background: -webkit-linear-gradient(top, transparent, #03e9f4);
+            right: 0px;
+            top: -100%;
+            animation: line2 1s 0.25s linear infinite;
+        }
+
+        @keyframes line2 {
+
+            50%,
+            100% {
+                top: 100%;
+            }
+        }
+
+        .btn>span:nth-child(3) {
+            width: 100%;
+            height: 2px;
+            background: -webkit-linear-gradient(left, #03e9f4, transparent);
+            left: 100%;
+            bottom: 0px;
+            animation: line3 1s 0.75s linear infinite;
+        }
+
+        @keyframes line3 {
+
+            50%,
+            100% {
+                left: -100%;
+            }
+        }
+
+        .btn>span:nth-child(4) {
+            width: 2px;
+            height: 100%;
+            background: -webkit-linear-gradient(top, transparent, #03e9f4);
+            left: 0px;
+            top: 100%;
+            animation: line4 1s 1s linear infinite;
+        }
+
+        @keyframes line4 {
+
+            50%,
+            100% {
+                top: -100%;
+            }
+        }
+    </style>
 </head>
+
 <body>
-<!--表单的enctype属性要设置为multipart/form-data-->
-<form action="/upload" method="post" enctype="multipart/form-data">
-    <table width="600">
-        <tr>
-            <td>上传者</td>
-            <td><input type="text" name="name"/></td>
-        </tr>
-        <tr>
-            <td>上传图片</td>
-            <td><input type="file" name="file"/></td>
 
-        </tr>
-        <tr>
-            <!--设置单元格可横跨的列数。-->
-            <td colspan="2"><input type="submit" value="上传"/></td>
-        </tr>
-    </table>
+<div class="loginBox">
+    <h2>登录</h2>
+        <form action = "/login" method="post">
+            <div class="item">
+                <input type="text" id="name" name = "name"> <br>
+                <label for=" ">name</label>
+            </div>
+            <div class="item">
+                <input type="password" id="password" name = "password"> <br>
+                <label for=" ">password</label>
+            </div>
+            <!--<div>
+                <input type="password" id="yzm" name = "yzm"> <br>
+                <label for=" ">验证码</label>
+                <img src="/captcha"><a href="javascript:changImage()">看不清换一张图片</a>
+            </div>-->
+            <div class="layui-form-item form_code">
+                <input class="layui-input" style="width: 140px;" name="captcha" placeholder="验证码" lay-verify="required" type="text" autocomplete="off">
+                <div class="code"><img id="captcha" src="/captcha" width="116" height="36" onclick="refreshCode(this)"></div>
+            </div>
+            <button class="btn">submit
+            </button>
+        </form>
+    <script>
+        function refreshCode(){
+            var captcha = document.getElementById("captcha");
+            captcha.src = "/captcha?t=" + new Date().getTime();
+        }
+    </script>
+</div>
 
-</form>
-<form action="/uploadFile" method="post" enctype="multipart/form-data">
-    <table width="600">
-        <tr>
-            <td>上传者</td>
-            <td><input type="text" name="name"/></td>
-        </tr>
-        <tr>
-            <td>上传文件</td>
-            <td><input type="file" name="file"/></td>
-
-        </tr>
-        <tr>
-            <!--设置单元格可横跨的列数。-->
-            <td colspan="2"><input type="submit" value="上传"/></td>
-        </tr>
-    </table>
-
-</form>
-<form action="/downloadFile" method="get" enctype="multipart/form-data">
-    <table width="600">
-
-        <tr>
-            <td>下载文件</td>
-            <td><input type="text" name="fileName"/></td>
-        </tr>
-        <tr>
-            <!--设置单元格可横跨的列数。-->
-            <td colspan="2"><input type="submit" value="下载"/></td>
-        </tr>
-    </table>
-
-</form>
-
-<!--表单的enctype属性要设置为multipart/form-data-->
-<form action="/uploadMultipleFiles" method="post" enctype="multipart/form-data">
-    <table width="600">
-        <tr>
-            <td>上传者</td>
-            <td><input type="text" name="name"/></td>
-        </tr>
-        <tr>
-            <td>上传多个文件</td>
-            <td><input type="file" multiple="multiple" name="files"/></td>
-
-        </tr>
-        <tr>
-            <!--设置单元格可横跨的列数。-->
-            <td colspan="2"><input type="submit" value="上传"/></td>
-        </tr>
-    </table>
-
-</form>
 </body>
 </html>
