--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,13 +6,10 @@
 </head>
 <body>
 <h3>用户注册</h3>
-<form action="#" method="post">
-    账号：<input type="text" id='uName'>
-    <br>
-    密码：<input type="password" id='uPwd'>
-    <br>
-    <a href="#" id="sub">注册</a>
-    <input type="button" value='取消'>
+<form action = "/login" method="post">
+    账号：<input type="text" id="name" name = "name"> <br>
+    密码：<input type="password" id = "password" name = "password"> <br>
+    <input type="submit" id = "login" value = "login">
 </form>
 </body>
 </html>
