--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -195,13 +195,17 @@
                 <input class="layui-input" style="width: 140px;" name="captcha" placeholder="验证码" lay-verify="required" type="text" autocomplete="off">
                 <div class="code"><img id="captcha" src="/captcha" width="116" height="36" onclick="refreshCode(this)"></div>
             </div>
-            <button class="btn">submit
-            </button>
+            <button class="btn">登录</button>
+            <button class="btn" onclick="jumpRe()">注册</button>
         </form>
     <script>
         function refreshCode(){
             var captcha = document.getElementById("captcha");
             captcha.src = "/captcha?t=" + new Date().getTime();
+        }
+        //写了函数，点击注册按钮就跳转到注册页面
+        function jumpRe(){
+            window.location.href="regist.html";
         }
     </script>
 </div>
